#287 Fixed unaligned recent transactions

--- a/client/src/styles/dashboard.scss
+++ b/client/src/styles/dashboard.scss
@@ -70,7 +70,9 @@
     padding-top: 5%;
     padding-bottom: 5%;
     display: flex;
-    justify-content: space-evenly;
+    width: 80%;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
